--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "main": "src/index.js",
   "dependencies": {
     "axios": "^0.18.0",
+    "localforage": "^1.7.3",
     "path": "^0.12.7",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-router": "^5.0.0"
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
+    "styled-components": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
@@ -17,6 +20,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.5",
+    "babel-plugin-styled-components": "^1.10.0",
     "copy-webpack-plugin": "^5.0.2",
     "eslint": "^5.3.0",
     "eslint-config-airbnb": "^17.1.0",
